# libmds-ng

./: .gitignore  Makefile  README.md  Tupfile  meson.build  status.h
docs/: Project.txt
dstring/: dstring.c
include/: dstring.h  llist.h  vector.h
llist/: llist.c  llist.h
string/: string.c  string.h
tests/: dstring  dstring.c  llist.c  llist_huge.c  string.c  vector.c  vector_huge.c
vector/: vector.c  vector.h
