project('libmds', 'c')

add_global_arguments('-Wpedantic', language : 'c')
add_global_arguments('-Wall', language : 'c')
add_global_arguments('-Wextra', language : 'c')
add_global_arguments('-Waggregate-return', language : 'c')
add_global_arguments('-Wbad-function-cast', language : 'c')
add_global_arguments('-Wcast-align', language : 'c')
add_global_arguments('-Wcast-qual', language : 'c')
add_global_arguments('-Wdeclaration-after-statement', language : 'c')
add_global_arguments('-Wfloat-equal', language : 'c')
add_global_arguments('-Wformat=2', language : 'c')
add_global_arguments('-Wmissing-declarations', language : 'c')
add_global_arguments('-Wmissing-include-dirs', language : 'c')
add_global_arguments('-Wmissing-prototypes', language : 'c')
add_global_arguments('-Wnested-externs', language : 'c')
add_global_arguments('-Wpointer-arith', language : 'c')
add_global_arguments('-Wredundant-decls', language : 'c')
add_global_arguments('-Wsequence-point', language : 'c')
add_global_arguments('-Wshadow', language : 'c')
add_global_arguments('-Wstrict-prototypes', language : 'c')
add_global_arguments('-Wswitch', language : 'c')
add_global_arguments('-Wundef', language : 'c')
add_global_arguments('-Wunreachable-code', language : 'c')
add_global_arguments('-Wunused-parameter', language : 'c')
add_global_arguments('-Wwrite-strings', language : 'c')
add_global_arguments('-Werror', language : 'c')

add_global_arguments('-DFOO=bar', language : 'c')
lib_objects = ['vector/vector.c']
static_library('mds', lib_objects)
